# R_TYPE_J.A.M.E.S.

./: .clang-format  .gitignore  AGENTS.md  ANIMATION_OFFSET_USAGE.md  ANIMATION_SYSTEM_SUMMARY.md  AUDIO_BUILD_STATUS.md  Advanced  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  CPPLINT_GUIDE.md  DEBUG_BUILD_GUIDE.md  ENTITYMANAGER_IMPLEMENTATION_STATUS.md  MANUAL_TESTING_GUIDE.md  OPENAL_SOFT_BUILD_FIX.sh  OPENAL_SOFT_WORKAROUND.md  QUICK_TEST_GUIDE.md  README.md  RENDERING_DOCS_SUMMARY.md  TROUBLESHOOTING.md  build.bat  build.sh  build_output.txt  build_server.sh  build_server_only.sh  build_system_libs.sh  check-coding-style.sh  commitlint.config.js  conanfile.py  game_logic_patterns.txt  issue2_detail.md  issue3_detail.md  issue_detail.md  last_build_output.txt  lint_code.sh  lint_local.sh  output.txt  output2.txt  (+16 more)
client/: CMakeLists.txt  Composant.hpp  main.cpp
client/Assets/Shaders/: wave.frag
client/Engine/: gameWorld.hpp  hierarchyTools.cpp  hierarchyTools.hpp  initRegistery.cpp  initRegistery.hpp  initRegisteryComponent.cpp  initRegisteryComponent.hpp  initRegisterySystems.cpp  initRegisterySystems.hpp  initRegistryComponent.cpp  initRegistryComponent.hpp  initRegistrySystems.cpp  initRegistrySystems.hpp  initRegistrySystems_Events.cpp  originTool.cpp  originTool.hpp
client/Engine/Audio/: AudioManager.cpp  AudioManager.hpp  SFMLAudioBackend.cpp  SFMLAudioBackend.hpp
client/Engine/Events/: EngineEvent.hpp  Event.cpp  Event.h
client/Engine/Systems/: animationSystem.cpp  audioSystem.cpp  collisionDetectionSystem.cpp  controllableSystem.cpp  drawableSystem.cpp  initRegistrySystems.cpp  initRegistrySystems.hpp  initRegistrySystems_Events.cpp  movementSystem.cpp  playfieldLimitSystem.cpp  positionSystem.cpp
client/Game/: initGameLevel.cpp  initGameLevel.hpp  initRegistry.cpp  initRegistry.hpp  initScenes.cpp  initScenes.hpp
client/Game/ScenesManagement/: Scene_A.cpp  Scene_A.hpp  initScenes.cpp
client/Game/scenes_management/: Scene_A.hpp  initScenes.cpp
client/Network/: Network.cpp
client/adapters/: SFMLInputAdapters.hpp
client/assets/config/: audio.json  engine_config.json
client/assets/data/: player.json
client/engine/: CollidingTools.cpp  CollidingTools.hpp  GameWorld.cpp  GameWorld.hpp  HierarchyTools.cpp  HierarchyTools.hpp  InitRegistryComponent.cpp  InitRegistryComponent.hpp  OriginTool.cpp  OriginTool.hpp  TypeConversions.hpp  hierarchyTools.cpp  hierarchyTools.hpp  initRegistryComponent.cpp  originTool.cpp  originTool.hpp
client/engine/audio/: AudioManager.cpp  AudioManager.hpp  PluginAudioBackend.cpp  PluginAudioBackend.hpp  SFMLAudioBackend.cpp  SFMLAudioBackend.hpp
client/engine/events/: EngineEvent.hpp  Event.cpp
client/engine/rendering/: RenderingEngine.cpp
client/engine/systems/: InitRegistrySystems.cpp  InitRegistrySystems.hpp  InitRegistrySystems_Events.cpp  audioSystem.cpp  initRegistrySystems.cpp  initRegistrySystems_Events.cpp
client/engine/video/: PluginVideoBackend.cpp  PluginVideoBackend.hpp
client/game/: ClientApplication.cpp  ClientApplication.hpp  ClientApplicationCreateEntity.cpp  ClientApplicationHandles.cpp  ClientApplicationParseSnapshot.cpp  ClientApplicationUpdateEntity.cpp  CommandLineParser.cpp  CommandLineParser.hpp  InitRegistry.cpp  InitRegistry.hpp  ServerSpawner.cpp  ServerSpawner.hpp  SettingsManager.cpp  SnapshotTracker.hpp  initRegistry.cpp  initRegistry.hpp
client/game/scenes_management/: InitScenes.cpp  InitScenes.hpp  Scene_A.cpp  Scene_A.hpp  initScenes.cpp
client/graphics/: BackendResolver.cpp  BackendResolver.hpp  GraphicsBackendFactory.cpp  GraphicsBackendFactory.hpp  GraphicsPluginLoader.cpp  GraphicsPluginLoader.hpp  SFMLGraphicsBackend.cpp  SFMLGraphicsBackend.hpp  SFMLRenderContext.cpp  SFMLRenderContext.hpp
client/include/: AccessibilitySettings.hpp  ColorsConst.hpp  Composant.hpp  EnemiesConst.hpp  GameplaySettings.hpp  GraphicsSettings.hpp  LayersConst.hpp  Network.hpp  PlayerConst.hpp  SettingsManager.hpp  SettingsManager.tpp  WindowConst.hpp
client/input/: SFMLInputBackend.cpp  SFMLInputBackend.hpp
client/mock/: MockRenderContext.hpp
client/network/: Network.cpp  Network.hpp
client/platform/: SFMLEventSource.cpp  SFMLEventSource.hpp  SFMLWindow.cpp  SFMLWindow.hpp
client/plugins/: CMakeLists.txt
client/src/: Network.cpp  RenderComponent.cpp
docs/: GDD.md  (+27 more)
engine/: CMakeLists.txt  DLLoader.hpp  DLLoader.tpp  entity.cpp  entity.hpp  registry.cpp  registry.hpp  sparse_array.hpp
engine/include/: entity.hpp  indexed_zipper.hpp  indexed_zipper.tpp  registry.hpp  registry.tpp  sparse_array.hpp  sparse_array.tpp  zipper.hpp  zipper.tpp
engine/src/: entity.cpp  registry.cpp
plugins/: CMakeLists.txt  stub_missing_symbols.cpp
plugins/graphics_sfml/: CMakeLists.txt  sfml_plugin.cpp
pocs/: CMakeLists.txt  Makefile  vcpkg.json
pocs/ecs/: CMakeLists.txt
pocs/sdl2-demo/: CMakeLists.txt
pocs/sfml-demo/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp  manual_test_worldgen.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  TestGraphicsSetup.hpp  test_audio_mock.cpp  test_audio_plugin.cpp  test_audio_system.cpp  test_button_click_system.cpp  test_clickable_component.cpp  test_client_connection_manager.cpp  test_command_line_parser.cpp  test_components.cpp  test_config.cpp  test_drawable_system.cpp  test_game_state_system.cpp  test_input_manager.cpp  test_input_to_bitfield.cpp  test_network.cpp  test_network_input_system.cpp  test_packet_handler.cpp  test_packet_sender.cpp  test_packets.cpp  test_platform_events.cpp  test_registry.cpp  test_render_components.cpp  test_server.cpp  test_server_spawner.cpp  test_shader_system.cpp  test_sparse_array.cpp  test_systems.cpp  test_text_system.cpp  test_transform_components.cpp  test_video_plugin.cpp  test_worldgen.cpp  test_zipper.cpp
tests/artifacts/: .gitignore
tests/client/: test_sfml_render_context.cpp
tests/integration/: HeadlessTestRenderer.hpp  pixel_compare_test.cpp  smoke_plugin_load.cpp
tests/mock/: MockRenderContext.hpp
tests/unit/: test_dl_loader.cpp
(+391 files in other folders)
